plre/CNF.g4
/**
 * An ANTLR v4 grammar for propositional logic formulae
 * expressed in Conjunctive Normal Form (CNF).
 *
 * Adapted from an ANTLR v4 grammar for CNF generated by
 * Claude.ai (Sonnet 4.6, Pro plan, Apr 2026)
 * 
 * CNF structure:
 * A formula is a conjunction of clauses: C1 & C2 & ... & Cn
 * A clause is a disjunction of literals: L1 | L2 | ... | Lm
 * A literal is either an atom or its negation: p or !p
 *
 * The grammar is intentionally flat — CNF doesn't need recursive 
 * nesting since the structure is fixed at exactly three levels
 * (formula -> clause -> literal), unlike general propositional 
 * logic which needs recursive 'expr' rules to handle arbitrary
 * nesting.
 */

grammar CNF;

// Parser rules

cnf     : clause (AND clause)* EOF ;

clause  : LPAREN literal (OR literal)* RPAREN
        | literal
        ;

literal : NOT atom
        | atom
        ;

atom    : VARIABLE ;

// Lexer rules

AND     : '&' | 'AND' ;
OR      : '|' | 'OR'  ;
NOT     : '~' | '!'   | 'NOT' ;

LPAREN  : '(' ;
RPAREN  : ')' ;

VARIABLE: [a-zA-Z][a-zA-Z0-9_]* ;

WS      : [ \t\r\n]+ -> skip ;
